[project]
name = "twitter200m"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
    "black[jupyter]==25.12.0",
    "jupyter==1.1.1",
    "matplotlib==3.10.8",
    "polars==1.37.1",
    "psutil==7.2.1",
    "pyarrow==22.0.0",
    "seaborn==0.13.2",
    "tldextract==5.3.1",
]

[dependency-groups]
dev = [
    "ruff==0.14.11",
]
